Add Station Lead Opportunity and rework other stuff